# cmu_project_public_bak

./: README.md
.github/ISSUE_TEMPLATE/: test-report-template.md
docs/: 5-Assignment_team6.docx  Cadence.xlsx  Enc_Dec_Specification.docx  Enc_Dec_format.pptx  JetsonNano_pjt.tm7  Team6_Schedule.xlsx  Threat_Modeling_Assignment_team6.docx  draft_risk_management.xlsx  draft_ux.pptx  phase1_document_team6-schedule-requirement.docx  phase1_document_team6.docx  phase1_presentation.pptx  requirements_v2.0.xlsx  risk_management.xlsx  ux_and_callsequence.pptx  ~$ase1_document_team6.docx
docs/00_schedule/: Team6_Schedule.xlsx
docs/01_system_requirement/: requirements_v2.0.xlsx  system_requirement.txt
docs/03_security_goal/: security_goal.txt
docs/05_threat_modeling/: JetsonNano_pjt.tm7  PnG.docx  ThreatModeling.txt  jetsonNano_STRIDE.xlsx  threat_modeling.xlsx
docs/06_risk_assessment/: risk_assessment.xlsx
docs/07_security_requirement/: security_requirements.txt  security_requirements.xlsx
docs/09_static_analysis/: cppcheck_20210610_v0.5.0.csv  cppcheck_20210610_v0.5.0.xlsx  cppcheck_20210610_v0.5.0_check.xlsx  cppcheck_20210615_v1.0.0.csv  cppcheck_20210616_v1.1.0.csv  flawfinder_20210614_v0.5.0.txt  flawfinder_20210615_v1.0.0.txt  flawfinder_20210616_v1.1.0.txt  static_analysis_20210608_v0.0.1_reviewed.xlsx  static_analysis_20210614_v0.5.0_reviewed.xlsx  static_analysis_20210616_v1.1.0_reviewed.xlsx
docs/10_implementation/: SecurityuProtections_compiler_options.docx  architecture.pptx  ux_and_callsequence.pptx
docs/11_test_case/: packet_readme.txt  test_cases.xlsx
docs/99_assignment/: Security_Requirements_Assignment_team6.docx  Threat_Modeling_Assignment_team6.docx
docs/static_analysis/: cppcheck_20210608_v0.0.1.csv  flawfinder_20210607_v0.0.1.txt
source/: checksec.sh
source/Common/: openssl_hostname_validation.cpp
source/LgFaceRecDemoTCP_Jetson_NanoV2/: CMakeLists.txt
source/client/: CMakeLists.txt  README.md
source/client/src/: app.cpp  app.h  main.cpp  remote.config
source/common/: CommonStruct.h  KeyboardSetup.cpp  Logger.cpp  Logger.h  NetworkTCP.cpp  NetworkTCP.h  NetworkUDP.cpp  NetworkUDP.h  SG_InputBox.cpp  SG_InputBox.h  SG_InputBoxLib.h  TcpSendRecv.cpp  TcpSendRecv.h  TcpSendRecvJpeg.cpp  TcpSendRecvJpeg.h  UdpSendRecvJpeg.cpp  openssl_hostname_validation.cpp  openssl_hostname_validation.h  utils.cpp  utils.h
source/common/keys/ca/: ca.crt
source/common/keys/client/: client.key
source/common/keys/server/: server.key
source/common/libs/libcertcheck/: certcheck.h
source/custom/keys/: create_key.sh
source/custom/keys/client/: client.crt  client.key
source/custom/keys/server/: server.crt
source/custom/two-way-ssl-c/: Makefile  client.c  client.h  main.c  openssl_hostname_validation.c  openssl_hostname_validation.h  review.md  server.c  server.h
source/server/: .gitignore  CMakeLists.txt  README.md  credential
source/server/libs/libsslcrypto/: sealck.h
source/server/src/: baseEngine.cpp  baseEngine.h  common.cpp  common.h  faceNet.cpp  faceNet.h  main.cpp  mtcnn.cpp  mtcnn.h  network.cpp  network.h  onet_rt.cpp  onet_rt.h  pBox.h  pnet_rt.cpp  pnet_rt.h  rnet_rt.cpp  rnet_rt.h  videoStreamer.cpp  videoStreamer.h
source/server/trt_l2norm_helper/: CMakeLists.txt  l2norm_helper.cpp  l2norm_helper.cu  l2norm_helper.h
study_doc/lecture_slides/: 1-script.docx  3-script.docx  4-script.docx  5-script.docx
